--- a/christmas.html
+++ b/christmas.html
@@ -78,7 +78,7 @@
   <script id="insert"></script>
 
 
-    <script src="/js/stringify.js?e310c79e70de534ebb67af698277b9d4db31b52b" charset="utf-8"></script>
+    <script src="/js/stringify.js?70f54b2164adb3514deb894e9f57088052a05231" charset="utf-8"></script>
     <script>
       const customConsole = (w) => {
         const pushToConsole = (payload, type) => {
@@ -183,8 +183,8 @@
     </div>
   </div>
 </nav>
-<div>
-  <div id="carouselExampleIndicators" class="carousel slide">
+<div class="d-flex flex-column">
+  <div id="carouselExampleIndicators" class="carousel slide flex-fill">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
@@ -194,24 +194,28 @@
     <div class="carousel-inner">
       <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/-Qf9JKLysUg/1920x1080')">
         <h1 class="display-4 carousel-item-title">Twinkle</h1>
+        <button type="button" class="btn btn-primary btn-lg">Set Animation</button>
         <div class="carousel-caption d-block">
           <p>A gentle sparkle in the trees.</p>
         </div>
       </div>
       <div class="carousel-item" style="background-image: url('https://source.unsplash.com/OPZLe7zcCKE/1920x1080')">
         <h1 class="display-4 carousel-item-title">Raindrops</h1>
+        <button type="button" class="btn btn-primary btn-lg">Set Animation</button>
         <div class="carousel-caption d-block">
           <p>Drops of light cascade from above.</p>
         </div>
       </div>
             <div class="carousel-item" style="background-image: url('https://source.unsplash.com/zh7GEuORbUw/1920x1080')">
         <h1 class="display-4 carousel-item-title">Wave</h1>
+        <button type="button" class="btn btn-primary btn-lg">Set Animation</button>
         <div class="carousel-caption d-block">
           <p>Waves of light move like wind in the branches.</p>
         </div>
       </div>
             <div class="carousel-item" style="background-image: url('https://source.unsplash.com/ZXbeOqF1NFQ/1920x1080')">
         <h1 class="display-4 carousel-item-title">Solid</h1>
+        <button type="button" class="btn btn-primary btn-lg">Set Animation</button>
         <div class="carousel-caption d-block">
           <p>Light up the night in blazing glory.</p>
         </div>
